--- a/app/src/main/res/menu/menu_tool_bar.xml
+++ b/app/src/main/res/menu/menu_tool_bar.xml
@@ -3,7 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!--右侧添加操作条目-->
-
+    <item
+        android:id="@+id/action_filter"
+        android:title="@string/筛选"
+        app:showAsAction="ifRoom" />
     <!--右侧设置条目，收起，不显示-->
     <item
         android:id="@+id/action_setting"
