登录界面加入身份选择；在查看疫情点页面加入权限控制，现在只有医生用户可以看到变更等级按钮。当前有关身份判断的值均写死为普通用户

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     tools:context=".LoginActivity">
 
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="56dp"
@@ -30,7 +31,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        app:srcCompat="@drawable/logo_xzw" />
+        app:srcCompat="@drawable/logo_xzw"
+        android:contentDescription="@string/app_name" />
 
     <EditText
         android:id="@+id/input_email"
@@ -68,6 +70,15 @@
         app:layout_constraintTop_toBottomOf="@+id/input_email"
         tools:targetApi="o"
         tools:textSize="16sp" />
+
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/role_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginEnd="24dp"
+        android:text="@string/用户身份"
+        app:useMaterialThemeColors="true" />
 
     <Button
         android:id="@+id/button_login"
